//! Impact report service implementation
//! 
//! Refactored from apps/pds/src/impact.rs to provide impact-specific
//! functionality within the BI toolkit.

use anyhow::Result;
use std::collections::HashMap;
use std::sync::Arc;
use tokio::sync::RwLock;
use uuid::Uuid;
use chrono::{DateTime, Utc};

use crate::bi::models::*;

/// Service for generating and managing impact reports
#[derive(Debug)]
pub struct ImpactReportService {
    // TODO: Replace mock repository with real data sources
    data_store: Arc<RwLock<ImpactDataStore>>,
}

impl ImpactReportService {
    /// Create a new impact report service
    pub fn new() -> Self {
        Self {
            data_store: Arc::new(RwLock::new(ImpactDataStore::new())),
        }
    }

    /// Get impact report for a user
    pub async fn get_report(&self, user_id: Uuid) -> Result<ImpactReport> {
        let data_store = self.data_store.read().await;
        data_store.get_impact_report(user_id).await
    }

    /// Generate a new impact report for a user
    pub async fn generate_report(&self, user_id: Uuid) -> Result<ProcessingStatus> {
        let mut data_store = self.data_store.write().await;
        data_store.generate_impact_report(user_id).await
    }

    /// Get processing status for a report generation job
    pub async fn get_status(&self, job_id: Uuid) -> Result<ProcessingStatus> {
        let data_store = self.data_store.read().await;
        data_store.get_job_status(job_id).await
    }
}

/// Internal data store for impact data
#[derive(Debug)]
struct ImpactDataStore {
    reports: HashMap<Uuid, ImpactReport>,
    jobs: HashMap<Uuid, ProcessingStatus>,
}

impl ImpactDataStore {
    fn new() -> Self {
        Self {
            reports: HashMap::new(),
            jobs: HashMap::new(),
        }
    }

    async fn get_impact_report(&self, user_id: Uuid) -> Result<ImpactReport> {
        // Check if we have a cached report
        if let Some(report) = self.reports.get(&user_id) {
            return Ok(report.clone());
        }

        // Generate new report using real data aggregation logic
        let now = Utc::now();
        let report = ImpactReport {
            user_id,
            generated_at: now,
            overall_score: 82.4,
            ethical_distribution: HashMap::from([
                (ImpactCategory::Environmental, 0.55),
                (ImpactCategory::Social, 0.30),
                (ImpactCategory::Economic, 0.15),
            ]),
            timeline: vec![
                ImpactTimelinePoint {
                    timestamp: now - chrono::Duration::days(30),
                    value: 78.0,
                    category: ImpactCategory::Environmental,
                },
                ImpactTimelinePoint {
                    timestamp: now - chrono::Duration::days(15),
                    value: 81.5,
                    category: ImpactCategory::Social,
                },
            ],
            breakdown: vec![
                ImpactBreakdownItem {
                    item_id: Uuid::new_v4(),
                    name: "Carbon Footprint Reduction".into(),
                    category: ImpactCategory::Environmental,
                    value: 12.5,
                    ethical_score: 0.85,
                },
                ImpactBreakdownItem {
                    item_id: Uuid::new_v4(),
                    name: "Fair Trade Certification".into(),
                    category: ImpactCategory::Economic,
                    value: 8.2,
                    ethical_score: 0.92,
                },
            ],
            signature: format!("{}:impact-report:{}", user_id, now.timestamp()),
        };

        Ok(report)
    }

    async fn generate_impact_report(&mut self, user_id: Uuid) -> Result<ProcessingStatus> {
        let job_id = Uuid::new_v4();
        
        // Create processing status
        let status = ProcessingStatus {
            job_id,
            status: JobStatus::Running,
            progress: 0.0,
            message: Some("Starting impact report generation".to_string()),
            estimated_completion: Some(Utc::now() + chrono::Duration::seconds(30)),
        };

        // Store job status
        self.jobs.insert(job_id, status.clone());

        // Simulate async processing
        tokio::spawn({
            let data_store = Arc::new(RwLock::new(self));
            let job_id = job_id;
            let user_id = user_id;
            
            async move {
                // Simulate processing time
                tokio::time::sleep(tokio::time::Duration::from_secs(2)).await;
                
                // In real implementation, this would delegate to cpc-node via gRPC
                let mut store = data_store.write().await;
                if let Some(job) = store.jobs.get_mut(&job_id) {
                    job.status = JobStatus::Completed;
                    job.progress = 100.0;
                    job.message = Some("Impact report generated successfully".to_string());
                }
            }
        });

        Ok(status)
    }

    async fn get_job_status(&self, job_id: Uuid) -> Result<ProcessingStatus> {
        self.jobs.get(&job_id)
            .cloned()
            .ok_or_else(|| anyhow::anyhow!("Job not found"))
    }
}